<resources>
    <string name="app_name" translatable="false">Omega Tracker</string>
    <string name="hint_enter_token">Введите ваш токен</string>
    <string name="label_get_token">Как получить токен?</string>
    <string name="button_auth">Авторизация</string>
    <string name="task">Задачи</string>
    <string name="start_count">Запустить таймер</string>
    <string name="pause">Пауза</string>
    <string name="complete">Завершить</string>
    <string name="exit_from_profile">Выйти из профиля</string>
    <string name="settings">Настройки</string>
    <string name="successfully">Успешно</string>
    <string name="time_over">Просрочено на\n%s</string>
    <string name="description">Описание</string>
    <string name="description_task">Описание задачи</string>
    <string name="help_for_get_token">1. Перейдите в свой аккаунт YouTrack
\n\n2. Нажмите на свой аватар в шапке приложения и выберите в меню Профиль.
\n\n3. Перейдите на вкладку «Безопасность учетной записи».\n4. Нажмите кнопку «Новый токен».
\n\n5. В диалоговом окне «Новый постоянный токен» укажите имя нового токена и область доступа к нему. Область действия токена — это список служб, к которым вы можете получить доступ с помощью этого нового токена.
\n\n6. Нажмите кнопку Создать токен. Отображается диалоговое окно с новым токеном.
\n\n7. Нажмите кнопку «Копировать токен».
\n\n8. Поздравляю, вы получили свой токен доступа, теперь вставьте его в поле ввода</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="no_internet">Нет подключения\nк интернету</string>
    <string name="invalidToken">Неверный токен</string>
    <string name="enter_token">Введите токен</string>
    <string name="timer_stopped">Таймер остановлен</string>
    <string name="task_completed">Задача завершена</string>
    <string name="create_new_task">Создал новую задачу</string>
    <string name="come_out">Выходим…</string>
    <string name="task_completed_by_time">Задача завершена по истечению времени</string>
    <string name="time_out">Время вышло</string>
    <string name="no_data">Нет данных</string>
    <string name="timer_run">Таймер запущен</string>
    <string name="comment">Комментарий</string>
    <string name="write_comment">Напишите комментарий</string>
    <string name="h">ч.</string>
    <string name="m">м.</string>
    <string name="show_all">Показать всё</string>
    <string name="today">Сегодня</string>
    <string name="all">Все</string>
    <string name="show_today">Показать сегодня</string>
    <string name="track_time">Добавить затраченное время</string>
    <string name="task_name">Название задачи</string>
    <string name="time_spent">Время прошло</string>
    <string name="cancel">Отменить</string>
    <string name="canceled">Отменено</string>
    <string name="send">Отправить</string>
    <string name="continue_timer">Продолжить</string>
    <string name="time_sent_successfully">Время успешно отправлено</string>
    <string name="error_try_later">Ошибка\nпопробуйте позже</string>
    <string name="state_task">Статус задачи</string>
    <string name="status_changed_successfully">Состояние успешно изменено</string>
    <string name="status_changed_failed">Изменить состояние не удалось</string>
    <string name="impossible_completed_task_no_internet">Невозможно завершить задачу.\nНет подключения к интернету</string>
    <string name="minimal_time">Минимальное время\nот 1 минуты</string>
    <string name="d.">д.</string>
    <string name="h.">ч.</string>
    <string name="m.">м.</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="create_custom_task">Создать свою новую задачу</string>
    <string name="label">Название</string>
    <string name="name_task">Название задачи</string>
    <string name="create">Создать</string>
    <string name="summary_custom_task">Описание</string>
    <string name="write_summary_custom_task">Напишите описание задачи</string>
    <string name="select_time_and_date_custom_task">Выберите время и дату</string>
    <string name="timer_is_not_running">Таймер на запущен</string>
    <string name="time_past">Времени прошло: </string>
    <string name="example_time">2ч35м</string>
    <string name="term">Срок</string>
    <string name="custom_task">Личные задачи</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="custom_task_create">Кастомная задача создана</string>
    <string name="add_time">Добавить время</string>
    <string name="сomplete">Завершить и удалить задачу</string>
    <string name="update_task">Обновить задачу</string>
    <string name="update">Обновить</string>
    <string name="no_date_specified">Дата не указана</string>
    <string name="empty_fields">Пустых полей быть не должно</string>
    <string name="stop_the_task">Задача должна быть остановлена</string>
    <string name="type_enter_time">Тип ввода времени</string>
    <string name="language">Язык</string>
    <string name="error_in_field_term">Поле \"Срок\" заполнено не верно</string>
    <string name="field_is_filled_in_incorrectly">Поле заполнено неверно</string>
    <string name="change_task">Изменить задачу</string>
    <string name="remove_task">Удалить задачу</string>
    <string name="are_you_sure_delete_task">Вы уверены, что хотите удалить задачу?</string>
    <string name="are_you_sure_to_log_out_of_your_profile">Вы уверены, что хотите выйти из вашего профиля?\n(все кастомные задачи удалятся)</string>
    <string name="сonfirmation">Подтверждение</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="personal_task">Личные задачи</string>
    <string name="profile">Профиль</string>
    <string name="label_name">Имя</string>
    <string name="last_name_label">Фамилия</string>
    <string name="user_name_label">Имя пользователя</string>
    <string name="standert_time_entery_type">Стандартный тип ввода времени</string>
    <string name="theme">Тема</string>
    <string name="email">Email</string>
    <string name="select_task_icon">Выбрать иконку задачи</string>
    <string name="time_duration">Затраченное время</string>
    <string name="youtrack">YouTrack</string>
    <string name="drums">Барабаны</string>
    <string name="pending_task_sent">Ожидающее задачи отправлены</string>
    <string name="run_until">Выполнить до</string>
</resources>