<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screens.Profile.ProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/rubik_semibold"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:src="@drawable/common_google_signin_btn_icon_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/user_name_label"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/rubik_regular"
        android:paddingHorizontal="20dp"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/rubik_regular"
        android:paddingHorizontal="20dp"
        android:textColor="@color/gray"
        android:textSize="20sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/rubik_semibold"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/standert_time_entery_type"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch_type_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="8" />
    </LinearLayout>

</LinearLayout>