<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/main"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/create_custom_task"
        android:textAlignment="center"
        android:textColor="@color/only_white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="Выполнить до"
        android:textColor="@color/only_white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textview_change_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/select_time_and_date_custom_task"
        android:textAlignment="center"
        android:textColor="@color/light_Purple"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/term"
        android:textColor="@color/only_white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linearlayout_term_custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/numberpicker_days"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@color/light_Purple"
                android:theme="@style/NumberPickerTheme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/d."
                android:textColor="@color/real_white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/numberpicker_hours"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@color/light_Purple"
                android:theme="@style/NumberPickerTheme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/h."
                android:textColor="@color/real_white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/numberpicker_minuts"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@color/light_Purple"
                android:theme="@style/NumberPickerTheme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/m."
                android:textColor="@color/real_white"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/edittext_term_youtrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_Purple"
        android:digits="0123456789чм"
        android:hint="@string/example_time"
        android:minLines="1"
        android:paddingHorizontal="5dp"
        android:textColor="@color/only_white"
        android:textColorHint="@color/light_Purple" />

    <Spinner
        android:id="@+id/spinner_projects"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/label"
        android:textColor="@color/only_white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_Purple"
        android:hint="@string/name_task"
        android:maxLines="10"
        android:minLines="2"
        android:paddingHorizontal="5dp"
        android:textColor="@color/only_white"
        android:textColorHint="@color/light_Purple" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/summary_custom_task"
        android:textColor="@color/only_white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_Purple"
        android:hint="@string/write_summary_custom_task"
        android:maxLines="10"
        android:minLines="2"
        android:paddingHorizontal="5dp"
        android:textColor="@color/only_white"
        android:textColorHint="@color/light_Purple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="100">

        <androidx.cardview.widget.CardView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="40"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/light_Purple">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/cancel"
                android:textColor="@color/only_white"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="40"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/light_Purple">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/create"
                android:textColor="@color/only_white"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>