<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/main"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/rubik_medium"
        android:paddingBottom="20dp"
        android:text="Затрекать время"
        android:textColor="@color/real_white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Название задачи:"
        android:textColor="@color/real_white" />

    <TextView
        android:id="@+id/text_name_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:paddingVertical="5dp"
        android:textColor="@color/real_white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Время прошло"
        android:textColor="@color/real_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:minWidth="30dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/real_white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h"
            android:textColor="@color/real_white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:maxLength="2"
            android:minWidth="30dp"
            android:textColor="@color/real_white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textColor="@color/real_white"
            android:textSize="20sp" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textColor="@color/real_white" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_comment"
        android:maxLines="10"
        android:minLines="2"
        android:paddingHorizontal="5dp"
        android:textColor="@color/real_white"
        android:textColorHint="@color/light_Purple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="100">

        <androidx.cardview.widget.CardView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="40"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/light_Purple">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik_regular"
                android:text="Отменить"
                android:textColor="@color/real_white"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="40"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/light_Purple">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/rubik_regular"
                android:text="Отправить"
                android:textColor="@color/real_white"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>